# MiniSQL

./: .gitignore  README.md  main.cpp  meson.build
API/: API.cpp  API.h
BufferManager/: BufferManager.cpp  BufferManager.h
CatalogManager/: CatalogManager.cpp  CatalogManager.h
Common/: Common.h
IndexManager/: BPlus.h  IndexManager.cpp  IndexManager.h
Interpreter/: Executor.cc  ExecutorCreateIndex.cc  ExecutorCreateTable.cc  ExecutorDelete.cc  ExecutorDropIndex.cc  ExecutorDropTable.cc  ExecutorHelper.cc  ExecutorInsert.cc  ExecutorSelect.cc  Interpreter.cc  Interpreter.h  Query.h
RecordManager/: CMakeLists.txt  Makefile  RecordManager.cpp  RecordManager.h  test.cpp
libsqltoast/: meson.build
libsqltoast/src/parser/: symbol.cc
subprojects/libsqltoast/: README.md  meson.build
subprojects/libsqltoast/include/sqltoast/: column_reference.h  lexeme.h  sqltoast.h  statement.h  value.h
subprojects/libsqltoast/src/parser/: keyword.cc  literal.cc  literal.h  parse.h  statement.cc  symbol.h
subprojects/libsqltoast/src/parser/statements/: create_index.cc  create_table.cc  drop_index.cc
