project('libsqltoast', 'cpp', default_options : ['cpp_std=c++1z', 'b_lto=true'], version : '0.1')

src = [
    'src/parser/column_definition.cc',
    'src/parser/comment.cc',
    'src/parser/constraint.cc',
    'src/parser/context.cc',
    'src/parser/data_type_descriptor.cc',
    'src/parser/error.cc',
    'src/parser/keyword.cc',
    'src/parser/identifier.cc',
    'src/parser/lexer.cc',
    'src/parser/literal.cc',
    'src/parser/parse.cc',
    'src/parser/predicate.cc',
    'src/parser/query.cc',
    'src/parser/sequence.cc',
    'src/parser/statement.cc',
    'src/parser/statements/alter_table.cc',
    'src/parser/statements/create_index.cc',
    'src/parser/statements/create_schema.cc',
    'src/parser/statements/create_table.cc',
    'src/parser/statements/create_view.cc',
    'src/parser/statements/delete.cc',
    'src/parser/statements/drop_index.cc',
    'src/parser/statements/drop_schema.cc',
    'src/parser/statements/drop_table.cc',
    'src/parser/statements/drop_view.cc',
    'src/parser/statements/grant.cc',
    'src/parser/statements/insert.cc',
    'src/parser/statements/rollback.cc',
    'src/parser/statements/select.cc',
    'src/parser/statements/commit.cc',
    'src/parser/statements/update.cc',
    'src/parser/symbol.cc',
    'src/parser/table_reference.cc',
    'src/parser/token.cc',
    'src/parser/value.cc',
    'src/parser/value_expression.cc',
    'src/print/column_definition.cc',
    'src/print/column_reference.cc',
    'src/print/constraint.cc',
    'src/print/data_type.cc',
    'src/print/identifier.cc',
    'src/print/predicate.cc',
    'src/print/query.cc',
    'src/print/statement.cc',
    'src/print/table_reference.cc',
    'src/print/value.cc',
    'src/print/value_expression.cc',
]
inc = include_directories('include')
# The author put some headers in src/. They are only used during builds.
inc_build = include_directories('include', 'src')

libsqltoast = static_library('sqltoast', src, include_directories : inc_build)
libsqltoast_dep = declare_dependency(include_directories : inc,
  link_with : libsqltoast)
